crates/toml_edit/tests/snapshots/invalid/string/no-close-08.stderr
TOML parse error at line 2, column 29
  |
2 | 'a-string'.must-be = 'closed
  |                             ^
invalid literal string, expected `'`
